logs/rPackages.RNAseqQC_err.log
these 13 derivations will be built:
  /nix/store/0jiwxc1d7wpp2gr80s0m2hbmprdds8p9-r-geneplotter-1.48.0.drv
  /nix/store/965ddb7nlk2vgpq8rlzc883pbg5mzj92-r-Biostrings-2.38.4.drv
  /nix/store/231z63mhc8wws5al8a2n2q1xcvslvv2r-r-Rsamtools-1.22.0.drv
  /nix/store/j246hynfbzysv28pzvj7j00r64qm73xm-r-GenomicAlignments-1.6.3.drv
  /nix/store/2zghk7chwfrkvb03i2rvcq3mq5php9r4-r-rtracklayer-1.30.4.drv
  /nix/store/fvjcvrlci5h8ws0na367ngkj7r0dml3f-r-interactiveDisplayBase-1.8.0.drv
  /nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv
  /nix/store/4yj9i153mr2hc1sfp7i3n75mriagd6hl-r-AnnotationHub-2.2.5.drv
  /nix/store/k672ml5fm77ykn60x3gdlh5jznvvl4k4-r-GenomicFeatures-1.22.13.drv
  /nix/store/4ngh6j7z4m1q4is13rah2lq17av15gga-r-ensembldb-1.2.2.drv
  /nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv
  /nix/store/r8jrhgx178rd925csbrhwb98psw9zvq6-r-DESeq2-1.10.1.drv
  /nix/store/lyay3qsw8ds5sk84bii40km3h508h1ys-r-RNAseqQC-0.2.1.drv
this path will be fetched (3.76 MiB download, 3.76 MiB unpacked):
  /nix/store/j3p6zkqnn5hz02r8dnjha98536rg7fk0-RNAseqQC_0.2.1.tar.gz
copying path '/nix/store/j3p6zkqnn5hz02r8dnjha98536rg7fk0-RNAseqQC_0.2.1.tar.gz' from 'https://cache.nixos.org'...
building '/nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv'...
building '/nix/store/jp7fkc7qlwjy3vxz8dx7g5swjqwss4r9-r-genefilter-1.52.1.drv'...
building '/nix/store/0jiwxc1d7wpp2gr80s0m2hbmprdds8p9-r-geneplotter-1.48.0.drv'...
building '/nix/store/fvjcvrlci5h8ws0na367ngkj7r0dml3f-r-interactiveDisplayBase-1.8.0.drv'...
building '/nix/store/965ddb7nlk2vgpq8rlzc883pbg5mzj92-r-Biostrings-2.38.4.drv'...
Running phase: unpackPhase
unpacking source archive /nix/store/r05jnacs6a07kx1qgfcz1v6fc9lc9lna-BiocInstaller_1.20.3.tar.gz
source root is BiocInstaller
setting SOURCE_DATE_EPOCH to timestamp 1462997595 of file BiocInstaller/DESCRIPTION
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘BiocInstaller’ ...
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
Running phase: unpackPhase
unpacking source archive /nix/store/nasj7wpna8py8ck226zkspmk2br6niha-genefilter_1.52.1.tar.gz
source root is genefilter
setting SOURCE_DATE_EPOCH to timestamp 1453944267 of file genefilter/src/ttest.f
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘genefilter’ ...
** using staged installation
** libs
using C compiler: ‘clang version 16.0.6’
using Fortran compiler: ‘GNU Fortran (GCC) 13.3.0’
Running phase: unpackPhase
unpacking source archive /nix/store/dcrhap7kqkri2fkf5sp6n1g41brc7a1z-geneplotter_1.48.0.tar.gz
source root is geneplotter
setting SOURCE_DATE_EPOCH to timestamp 1444782746 of file geneplotter/inst/doc/visualize.pdf
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
Running phase: unpackPhase
** building package indices
unpacking source archive /nix/store/ihwk81k3xd6s6icqy21yssdzfi33bq8f-interactiveDisplayBase_1.8.0.tar.gz
using C++ compiler: ‘clang version 16.0.6’
using SDK: ‘’
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/c++ -std=gnu++17 -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2   -c half_range_mode.cpp -o half_range_mode.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c init.c -o init.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c nd.c -o nd.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c pAUC.c -o pAUC.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowPAUCs.c -o rowPAUCs.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c rowttests.c -o rowttests.o
/nix/store/93i6w80axzmddh7kl97br2axr8al13vx-gfortran-wrapper-13.3.0/bin/gfortran  -fPIC  -g -O2  -c ttest.f -o ttest.o
source root is interactiveDisplayBase
setting SOURCE_DATE_EPOCH to timestamp 1444794135 of file interactiveDisplayBase/inst/doc/interactiveDisplayBase.html
nd.c:24:10: fatal error: 'S.h' file not found
#include "S.h"
         ^~~~~
1 error generated.
Running phase: patchPhase
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: nd.o] Error 1
make: *** Attente des tâches non terminées....
Running phase: updateAutotoolsGnuConfigScriptsPhase
rowttests.c:172:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:172:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
rowttests.c:181:14: error: format string is not a string literal (potentially insecure) [-Werror,-Wformat-security]
              error(errmsg);
                    ^~~~~~
rowttests.c:181:14: note: treat the string as an argument to avoid this
              error(errmsg);
                    ^
                    "%s", 
2 errors generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: rowttests.o] Error 1
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
Running phase: unpackPhase
** testing if installed package can be loaded from temporary location
unpacking source archive /nix/store/krpgx3xhzwqc9a6k2aly5f59fd29zip8-Biostrings_2.38.4.tar.gz
* installing *source* package ‘geneplotter’ ...
** using staged installation
** R
** data
** inst
** byte-compile and prepare package for lazy loading
source root is Biostrings
setting SOURCE_DATE_EPOCH to timestamp 1454981144 of file Biostrings/src/xscat.c
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
* installing *source* package ‘interactiveDisplayBase’ ...
** using staged installation
** R
Running phase: configurePhase
Running phase: buildPhase
** inst
Running phase: checkPhase
** byte-compile and prepare package for lazy loading
Running phase: installPhase
Avis dans read.dcf(conn) :
  URL 'https://bioconductor.org/BiocInstaller.dcf': statut 'SSL connect error'
Bioconductor version 3.2 (BiocInstaller 1.20.3), ?biocLite for help
Error: le chargement du package ou de l'espace de noms a échoué pour ‘BiocInstaller’ :
.onAttach a échoué dans attachNamespace() pour 'BiocInstaller', détails :
  appel : if (IS_END_OF_LIFE) {
  erreur : l'argument est de longueur nulle
Erreur : le chargement a échoué
Exécution arrêtée
ERROR: loading failed
* removing ‘/nix/store/8mj6p2laa1h15j32p95v3skcxfrl88f1-r-BiocInstaller-1.20.3/library/BiocInstaller’
error: builder for '/nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv' failed with exit code 1;
       last 25 log lines:
       > Running phase: updateAutotoolsGnuConfigScriptsPhase
       > Running phase: configurePhase
       > Running phase: buildPhase
       > Running phase: checkPhase
       > Running phase: installPhase
       > * installing *source* package ‘BiocInstaller’ ...
       > ** using staged installation
       > ** R
       > ** inst
       > ** byte-compile and prepare package for lazy loading
       > ** help
       > *** installing help indices
       > ** building package indices
       > ** testing if installed package can be loaded from temporary location
       > Avis dans read.dcf(conn) :
       >   URL 'https://bioconductor.org/BiocInstaller.dcf': statut 'SSL connect error'
       > Bioconductor version 3.2 (BiocInstaller 1.20.3), ?biocLite for help
       > Error: le chargement du package ou de l'espace de noms a échoué pour ‘BiocInstaller’ :
       > .onAttach a échoué dans attachNamespace() pour 'BiocInstaller', détails :
       >   appel : if (IS_END_OF_LIFE) {
       >   erreur : l'argument est de longueur nulle
       > Erreur : le chargement a échoué
       > Exécution arrêtée
       > ERROR: loading failed
       > * removing ‘/nix/store/8mj6p2laa1h15j32p95v3skcxfrl88f1-r-BiocInstaller-1.20.3/library/BiocInstaller’
       For full logs, run 'nix log /nix/store/lxzpsk5ccj737303m1mbqkz0861f0wim-r-BiocInstaller-1.20.3.drv'.
error: 1 dependencies of derivation '/nix/store/4yj9i153mr2hc1sfp7i3n75mriagd6hl-r-AnnotationHub-2.2.5.drv' failed to build
error: 1 dependencies of derivation '/nix/store/lyay3qsw8ds5sk84bii40km3h508h1ys-r-RNAseqQC-0.2.1.drv' failed to build
